--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sanity/client": "^7.13.1",
+    "groq": "^4.20.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
