--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "@sanity/client": "^7.13.1",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "dotenv": "^17.2.3",
     "groq": "^4.20.0",
+    "lucide-react": "^0.556.0",
     "next": "16.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "snoowrap": "^1.23.0",
+    "twilio": "^5.10.7",
+    "twitter-api-v2": "^1.28.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
